New geojson with hours
Better data, add some styling

--- a/config.json
+++ b/config.json
@@ -19,6 +19,7 @@
     "Address",
     "City",
     "Phone",
+    {"name":"Days", "title":"Hours" },
     { "name": "Transit", "title" : "Transit" },
     { "name": "Section", "title": "Type of service"},
     { "name" :"Gender", "title": "Gender" }
